# VirtualStack

./: .gitignore  CMakeLists.txt  README.md  install-cmake-3.sh  resetFirewall.sh  runProfiling.sh  runValgrind.sh  setCapabilites.sh  tunUp.sh
comparing/: CMakeLists.txt  runComparing.py
comparing/src/: RawSocketTestCase.h  StackTestCase.h  StackWithRecvControllerTestCase.h  VSRouterOnly.h  VSRouterOnlyStack.h  VSSnippetMultiSocket.h  VSSnippetMultiSocketRouted.h  VSSnippetSocket.h  VSSnippetSocketRouted.h  VSSnippetSocketRouted2.h  main.cpp
ns3/: CMakeLists.txt
ns3/cmake/: FindNS3.cmake  FindNS3_DCE.cmake
ns3/lib/: howto  ip
ns3/lib/net-next-nuse/: .config
ns3/simulationPrinter/: main.py  metadata.py  plotHelper.py
ns3/simulationPrinter/plotter/: bargraphPlotter.py  boxPlotter.py  discreteDoubleHeatMapPlotter.py  discreteHeatMapPlotter.py  heatMapPlotter.py  linePlotter.py  multiLinePlotter.py  scatterPlotter.py  stackedBarGraph.py  stackedBarPlotter.py
ns3/simulationPrinter/utils/: listUtils.py
ns3/src/: main.cpp
ns3/src/simulations/: SequentialDeterministicErrorModel.cpp  SequentialDeterministicErrorModel.h  simulationRunner.h  simulationSetup.cpp  simulationSetup.h
ns3/src/simulations/app/: SimulationRunCapture.cpp  SimulationRunCapture.h  sctp_custom.h  sequentialOnOffApplication.cc  sequentialOnOffApplication.h  sequentialPacketSink.cc  sequentialPacketSink.h
ns3/src/simulations/options/: SimOptions.cpp  SimOptions.h  dccpOptions.cpp  dccpOptions.h  rdsOptions.cpp  rdsOptions.h  sctpOptions.cpp  sctpOptions.h  tcpOptions.cpp  tcpOptions.h  udpLiteOptions.cpp  udpLiteOptions.h  udpOptions.cpp  udpOptions.h
ns3/src/simulations/p2p/: discretSmallPacketSim.cpp  discretSmallPacketSim.h  throughputSim.cpp  throughputSim.h
ns3/src/simulations/sockets/rds/: linux-rds-socket-factory-impl.cc  linux-rds-socket-factory-impl.h  linux-rds-socket-factory.cc  linux-rds-socket-factory.h
ns3/src/simulations/sockets/udpLite/: linux-udp-lite-socket-factory-impl.cc  linux-udp-lite-socket-factory-impl.h  linux-udp-lite-socket-factory.cc  linux-udp-lite-socket-factory.h
ns3/src/simulations/transport/: BaseOverTransport.cpp  BaseOverTransport.h  OverCable.cpp  OverCable.h  OverComplexLTE.cpp  OverComplexLTE.h  OverComplexWifi.cpp  OverComplexWifi.h  OverLTE.cpp  OverLTE.h  OverLTEReal.cpp  OverLTEReal.h  OverWifi.cpp  OverWifi.h
ns3/src/snippets/: dce-cradle-mptcp.h  dce-cradle-simple.h  dceExample.h  dceVS.h  lteablauf.txt  ns3Helper.h  simple-global-routing.h  simpleUDPTest.h  tap-wifi-dumbbell.h  tap-wifi-virtual-machine.h  tapSimulation.h  tapSimulationOut.h  tapTest.h  tapTestDce.h  tcp-bulk-send.h  tcpBaseline.h  tcpBaselineLTE.h  tcpBaselineLTE_WLAN.h  tcpBaselineLTE_dce.h  tcpBaselineLTE_example.h  tcpBaselineWlan.h  tcpBaseline_dce.h
ns3/src/virtualStack/: TapNetworkConfig.h  tapComplexNetwork.h  tapP2P.h  tapPath.h
runner/: CMakeLists.txt  runFinalNetwork.py  runRunner.py
runner/src/: CmdParser.h  RawServerClient.h  VSServerClient.h  main.cpp
snippets/: CMakeLists.txt
snippets/src/: main.cpp
snippets/src/holepunching/: AcceptSnippet.h  LoopbackUdpHolePunching.h  TcpHolePunching.h  UdpHolePunching.h
snippets/src/ipv6/: UdpBasedSouthboundDevice.cpp  UdpBasedSouthboundDevice.h  ipv6Runner.h
snippets/src/ptr/: ptrtest.h
snippets/src/udp_socket/: UdpSocketSnippet.h
src/: DefaultVirtualStackSettings.cpp  DefaultVirtualStackSettings.h  LatencyMeter.cpp  LatencyMeter.h  VirtualStack.cpp  VirtualStack.h  VirtualStackLoader.h  VirtualStackSettings.cpp  VirtualStackSettings.h
src/common/Allocator/: IPool.cpp  IPool.h  Pool.h  VsObjectFactory.cpp  VsObjectFactory.h  pool_unique_ptr.h
src/common/Helper/: BandwidthLimiter.h  ChecksumExtensions.h  ClassMacros.h  DateTime.h  Debouncer.cpp  Debouncer.h  DomainExtensions.cpp  DomainExtensions.h  Logger.cpp  Logger.h  NetworkExtensions.cpp  NetworkExtensions.h  PacketFactory.h  ReverseSourceDest.h  RoutingTableHelper.h  SettingsStreamFactory.h  StopWatch.h  StringExtensions.h  UtilizationPlan.h  VectorExtensions.h  make_unique.h
src/interface/: IEndpoint.cpp  IEndpoint.h  IKernel.cpp  IKernel.h  INorthboundDevice.cpp  INorthboundDevice.h  IScheduler.cpp  IScheduler.h  ISocket.cpp  ISocket.h  ISocketEpoll.cpp  ISocketEpoll.h  ISocketFactory.cpp  ISocketFactory.h
src/kernel/: DatagramKernel.cpp  DatagramKernel.h  StreamKernel.cpp  StreamKernel.h
src/model/: DummySocket.cpp  DummySocket.h  InspectionStruct.h  InternetProtocolEnum.h  MetricData.h  PosixSocket.cpp  PosixSocket.h  PosixSocketEpoll.cpp  PosixSocketEpoll.h  PosixSocketFactory.cpp  PosixSocketFactory.h  StackCreationResult.h  StackDetails.h  TransportProtocolEnum.h
src/southbound/: NetworkMessageController.cpp  NetworkMessageController.h  SouthboundCallbacks.h  SouthboundControl.cpp  SouthboundControl.h  SouthboundSessionController.cpp  SouthboundSessionController.h
src/southbound/model/: ConfigurationState.h  ConfigurationTask.h  IReceiveFromNetwork.cpp  IReceiveFromNetwork.h  ISerializeable.cpp  ISerializeable.h
src/southbound/protocol/: NetworkMessageEnum.h  NetworkReceiveMessage.cpp  NetworkReceiveMessage.h  NetworkSendMessage.cpp  NetworkSendMessage.h
src/stacks/: GenericStack.cpp  GenericStack.h  LoopStack.cpp  LoopStack.h  StackEnum.h  StackEnumHelper.cpp  StackEnumHelper.h
src/stacks/updPlus/: UdpPlusStack.cpp  UdpPlusStack.h
src/virtualStack/: Splitter.cpp  Splitter.h  StackCreationHandler.cpp  StackCreationHandler.h
src/virtualStack/factory/: EndpointFactory.cpp  (+5 more)
tests/: CMakeLists.txt
tests/src/: CommonTests.cpp  DirectConsole.cpp  IVSFixture.cpp  IVSFixture.h
tests/src/settings/: SettingsTests.cpp
tests/src/southbound/: SouthboundConnection.cpp  SouthboundLoopback.cpp  SouthboundRouting.cpp  SouthboundRouting2.cpp  SouthboundRoutingMatrix.cpp  SouthboundRoutingMatrix2.cpp  SouthboundRoutingMatrixCollision.cpp
tests/src/udpplus/: LoopbackKernel.cpp  LoopbackKernel.h  udpPlusFecCreateTests.cpp  udpPlusFecRestoreTests.cpp  udpPlusFlowWindowTests.cpp  udpPlusResendingTests.cpp  udpPlusSequenceNumberTests.cpp
(+85 files in other folders)
